new bundles done + pdt pages link to pdpa except the shiok aah bundle

--- a/chillicrab.html
+++ b/chillicrab.html
@@ -223,6 +223,20 @@
                 </div>
                 <div class="col-md-3 col-sm-4 col-4">
                     <div>
+                        <a href="wantonmee.html">
+                            <img src="images/shop-products/best-wanton-mee-flavoured-cashews.png"></a>
+                        <p>Experience the magic of Wanton Mee in every cashew.</p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-4 col-4">
+                    <div>
+                        <a href="chickenrice.html">
+                            <img src="images/shop-products/best-chicken-rice-flavoured-cashews.png"></a>
+                        <p>Get ready for a culinary journey with our Chicken Rice cashews.</p>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-4 col-4">
+                    <div>
                         <a href="biscoff.html">
                             <img src="images/shop-products/best-lotus-biscoff-flavoured-cashews.png"></a>
                         <p>Indulge in our irresistible Biscoff-infused cashews.</p>
@@ -293,7 +307,7 @@
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <a class="footer-link" href="#">PRIVACY POLICY</a> <br>
+                    <a class="footer-link" href="pdpa.html">PRIVACY POLICY</a> <br>
                     <a class="footer-link" href="#">TERMS AND CONDITIONS</a> <br>
                 </div>
             </div>
@@ -324,7 +338,7 @@
                     </div>
                 </div>
                 <div class="privacy-tandc">
-                    <a class="mobile-footer-links" href="#">PRIVACY POLICY</a> <br>
+                    <a class="mobile-footer-links" href="pdpa.html">PRIVACY POLICY</a> <br>
                     <a class="mobile-footer-links" href="#">TERMS AND CONDITIONS</a>
                 </div>
                 <div class="copyright">
