--- a/surebohsweet.html
+++ b/surebohsweet.html
@@ -101,15 +101,15 @@
           <!-- 3 part grid starts here -->
           <!-- first column -->
           <div class="product-info-img">
-            <img src="images/shop-products/best-flavoured-cashews-classic-bundle.png" alt="">
+            <img src="images/shop-products/best-flavoured-cashews-sweet-bundle.png" alt="">
           </div>
           <!-- second column / empty column -->
           <!-- <div class=""></div> -->
           <!-- third column -->
           <div class="product-info-text">
             <div class="product-name-desc">
-                <h3>Bas!c B!tches Bundle</h3>
-                <h6>Dive into the classics with our Bas!c B!tches Bundle! This collection features timeless flavours – the hearty Smoky BBQ, the spicy kick of Black Pepper, and the simple yet irresistible Salt-Roasted. A trio that guarantees satisfaction for every snack connoisseur.</h6>
+                <h3>Sure Boh?! Sweet Bundle</h3>
+                <h6>Challenge your taste buds with our Sure Boh?! Sweet Bundle. Experience the unexpected with the King of Fruits in Durian, the sweet and rosy Bandung, and the nostalgic sweetness of White Rabbit. A sweet symphony that defies convention and promises a uniquely delightful snacking experience.</h6>
             </div>
             <div class="ind-prod-review-line">
                 <p><img src="images/stars.png" alt=""> 1 review</p>
@@ -170,50 +170,46 @@
                 <div class="flavours row">
                     <div class="col-md-3 col-sm-4 col-4">
                         <div>
-                            <a href="shiokaah.html">
-                            <img src="images/shop-products/best-flavoured-cashews-local-shiok-bundle.png"></a>
-                            <p>It's a celebration of Singapore's culinary treasures!</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-4 col-4">
-                        <div>
-                            <a href="surebohsavoury.html">
+                            <a href="">
                             <img src="images/shop-products/best-flavoured-cashews-savoury-bundle.png"></a>
                             <p>Ready for a savoury adventure? Our Sure Boh?! Savoury Bundle is here to surprise your palate.</p>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-4 col-4">
                         <div>
-                            <a href="surebohsweet.html">
-                            <img src="images/shop-products/best-flavoured-cashews-sweet-bundle.png"></a>
-                            <p>A sweet symphony that defies convention and promises a uniquely delightful snacking experience.</p>
+                            <a href="">
+                            <img src="images/shop-products/best-flavoured-cashews-local-shiok-bundle.png"></a>
+                            <p>It's a celebration of Singapore's culinary treasures!</p>
                         </div>
                     </div>
-
                     <div class="col-md-3 col-sm-4 col-4">
                         <div>
-                            <a href="blackpepper.html">
-                                <img src="images/shop-products/best-black-pepper-flavoured-cashews.png"></a>
-                            <p>Savour the bold and aromatic kick of our Black Pepper cashews.</p>
+                            <a href="">
+                            <img src="images/shop-products/best-flavoured-cashews-classic-bundle.png"></a>
+                            <p>Dive into the classics with our Bas!c B!tches Bundle!</p>
                         </div>
                     </div>
-
                     <div class="col-md-3 col-sm-4 col-4">
                         <div>
-                            <a href="saltroasted.html">
-                                <img src="images/shop-products/best-salt-roasted-flavoured-cashews.png"></a>
-                            <p>Snack on our perfectly roasted and lightly salted premium cashews.</p>
+                            <a href="durian.html">
+                                <img src="images/shop-products/best-durian-flavoured-cashews.png"></a>
+                            <p>Indulge in the bold and creamy richness of our Durian-flavoured cashews.</p>
                         </div>
                     </div>
-
                     <div class="col-md-3 col-sm-4 col-4">
                         <div>
-                            <a href="smokybbq.html">
-                                <img src="images/shop-products/best-smoky-bbq-flavoured-cashews.png"></a>
-                            <p>Experience the hearty and smoky goodness of our BBQ-infused cashews.</p>
+                            <a href="bandung.html">
+                                <img src="images/shop-products/best-bandung-flavoured-cashews.png"></a>
+                            <p>Immerse yourself in the sweet and rosy goodness of our Bandung-flavoured cashews.</p>
                         </div>
                     </div>
-                    
+                    <div class="col-md-3 col-sm-4 col-4">
+                        <div>
+                            <a href="whiterabbit.html">
+                                <img src="images/shop-products/best-white-rabbit-flavoured-cashews.png"></a>
+                            <p>Immerse yourself in the creamy sweetness of the white rabbit-infused cashews.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -244,7 +240,7 @@
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <a class="footer-link" href="#">PRIVACY POLICY</a> <br>
+                    <a class="footer-link" href="pdpa.html">PRIVACY POLICY</a> <br>
                     <a class="footer-link" href="#">TERMS AND CONDITIONS</a> <br>
                 </div>
             </div>
@@ -275,7 +271,7 @@
                 </div>
             </div>
             <div class="privacy-tandc">
-                <a class="mobile-footer-links" href="#">PRIVACY POLICY</a> <br>
+                <a class="mobile-footer-links" href="pdpa.html">PRIVACY POLICY</a> <br>
                 <a class="mobile-footer-links" href="#">TERMS AND CONDITIONS</a>
             </div>
             <div class="copyright">
