--- a/bandung.html
+++ b/bandung.html
@@ -302,7 +302,7 @@
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <a class="footer-link" href="#">PRIVACY POLICY</a> <br>
+                    <a class="footer-link" href="pdpa.html">PRIVACY POLICY</a> <br>
                     <a class="footer-link" href="#">TERMS AND CONDITIONS</a> <br>
                 </div>
             </div>
@@ -333,7 +333,7 @@
                     </div>
                 </div>
                 <div class="privacy-tandc">
-                    <a class="mobile-footer-links" href="#">PRIVACY POLICY</a> <br>
+                    <a class="mobile-footer-links" href="pdpa.html">PRIVACY POLICY</a> <br>
                     <a class="mobile-footer-links" href="#">TERMS AND CONDITIONS</a>
                 </div>
                 <div class="copyright">
