--- a/smokybbq.html
+++ b/smokybbq.html
@@ -303,7 +303,7 @@
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <a class="footer-link" href="#">PRIVACY POLICY</a> <br>
+                    <a class="footer-link" href="pdpa.html">PRIVACY POLICY</a> <br>
                     <a class="footer-link" href="#">TERMS AND CONDITIONS</a> <br>
                 </div>
             </div>
@@ -334,7 +334,7 @@
                     </div>
                 </div>
                 <div class="privacy-tandc">
-                    <a class="mobile-footer-links" href="#">PRIVACY POLICY</a> <br>
+                    <a class="mobile-footer-links" href="pdpa.html">PRIVACY POLICY</a> <br>
                     <a class="mobile-footer-links" href="#">TERMS AND CONDITIONS</a>
                 </div>
                 <div class="copyright">
