edited footer and seo naming

--- a/about-us.html
+++ b/about-us.html
@@ -106,7 +106,7 @@
                 <h6>Quality</h6>
             </div>
             <div class="col-md-2 col-6">
-                <img src="images/shop-local.png"><br>
+                <img src="images/best-flavoured-cashews-singapore-shop-local.png"><br>
                 <h6>Local Pride</h6>
             </div>
             <div class="col-md-2 col-6">
@@ -124,12 +124,12 @@
         <div class="row">
             <div class="mission col-md-6">
                 <h3>Mission</h3>
-                <img src="images/target.png">
+                <img src="images/best-cashews-singapore-target.png">
                 <h6>Crunching our way to a tastier, happier world, one cashew at a time.</h6>
             </div>
             <div class="vision col-md-6">
                 <h3>Vision</h3>
-                <img src="images/vision.png">
+                <img src="images/best-singapore-flavoured-cashews-vision.png">
                 <h6>Nuts that unite people together and ignite delightful memories.</h6>
             </div>
         </div>
@@ -223,8 +223,7 @@
                 </div>
                 <div class="col-md-2 offset-md-1">
                     <a class="footer-link" href="shop.html">SHOP</a> <br>
-                    <a class="footer-link" href="shop.html">SALES</a> <br>
-                    <a class="footer-link" href="corporate.html">OCCASIONS</a> <br>
+                    <a class="footer-link" href="shop.html">ON SALE</a> <br>
                     <a class="footer-link" href="corporate.html">CORPORATE</a> <br>
                     <a class="footer-link" href="faqs.html">FAQS</a>
                 </div>
@@ -257,8 +256,7 @@
             <a href="index.html"><img class="Kacaang-logo" src="images/logo.png">
             <div class="mobile-footer-links">
                 <a class="mobile-footer-links" href="shop.html">SHOP</a> <br>
-                <a class="mobile-footer-links" href="shop.html">PROMOTIONS</a> <br>
-                <a class="mobile-footer-links" href="corporate.html">OCCASIONS</a> <br>
+                <a class="mobile-footer-links" href="shop.html">ON SALE</a> <br>
                 <a class="mobile-footer-links" href="corporate.html">CORPORATE</a> <br>
                 <a class="mobile-footer-links" href="faqs.html">FAQS</a> <br>
                 <a class="mobile-footer-links" href="about-us.html">OUR STORY</a> <br>
