edited footer and seo naming

--- a/farm.html
+++ b/farm.html
@@ -316,8 +316,7 @@
                 </div>
                 <div class="col-md-2 offset-md-1">
                     <a class="footer-link" href="shop.html">SHOP</a> <br>
-                    <a class="footer-link" href="shop.html">SALES</a> <br>
-                    <a class="footer-link" href="corporate.html">OCCASIONS</a> <br>
+                    <a class="footer-link" href="shop.html">ON SALE</a> <br>
                     <a class="footer-link" href="corporate.html">CORPORATE</a> <br>
                     <a class="footer-link" href="faqs.html">FAQS</a>
                 </div>
@@ -350,8 +349,7 @@
             <a href="index.html"><img class="kacaang-logo" src="images/logo.png">
             <div class="mobile-footer-links">
                 <a class="mobile-footer-links" href="shop.html">SHOP</a> <br>
-                <a class="mobile-footer-links" href="shop.html">PROMOTIONS</a> <br>
-                <a class="mobile-footer-links" href="corporate.html">OCCASIONS</a> <br>
+                <a class="mobile-footer-links" href="shop.html">ON SALE</a> <br>
                 <a class="mobile-footer-links" href="corporate.html">CORPORATE</a> <br>
                 <a class="mobile-footer-links" href="faqs.html">FAQS</a> <br>
                 <a class="mobile-footer-links" href="about-us.html">OUR STORY</a> <br>
