added links in nav-bar

--- a/about-us.html
+++ b/about-us.html
@@ -40,9 +40,9 @@
                             Shop
                         </button></a>
                         <div class="dropdown-content">
-                            <a class="dropdown-item" href="#" style="margin-top: 10px;">All Products</a>
-                            <a class="dropdown-item" href="#" style="margin-top: 10px;">On Sale</a>
-                            <a class="dropdown-item" href="#" style="margin-top: 10px; margin-bottom: 10px;">Corporate Orders</a>
+                            <a class="dropdown-item" href="shop.html" style="margin-top: 10px;">All Products</a>
+                            <a class="dropdown-item" href="shop.html#sales" style="margin-top: 10px;">On Sale</a>
+                            <a class="dropdown-item" href="corporate.html" style="margin-top: 10px; margin-bottom: 10px;">Corporate Orders</a>
                         </div>
                     </div>
                     <a class="nav-links" href="locate-us.html">Find Us</a>
