--- a/shiokaah.html
+++ b/shiokaah.html
@@ -101,15 +101,15 @@
           <!-- 3 part grid starts here -->
           <!-- first column -->
           <div class="product-info-img">
-            <img src="images/shop-products/best-flavoured-cashews-sweet-bundle.png" alt="">
+            <img src="images/shop-products/best-flavoured-cashews-local-shiok-bundle.png" alt="">
           </div>
           <!-- second column / empty column -->
           <!-- <div class=""></div> -->
           <!-- third column -->
           <div class="product-info-text">
             <div class="product-name-desc">
-                <h3>Sure Boh?! Savoury Bundle</h3>
-                <h6>Ready for a savoury adventure? Our Sure Boh?! Savoury Bundle is here to surprise your palate. Dive into the fragrant essence of Chicken Rice, savour the magic of Wanton Mee, and elevate your taste buds with the hearty kick of Sambal Belacan. An unconventional trio that redefines the art of savoury snacking in Singapore.</h6>
+                <h3>Shiok Aah! Bundle</h3>
+                <h6>Indulge in the best of local flavours with our Shiok Aah! Bundle. It's a celebration of Singapore's culinary treasures – the rich and creamy Salted Egg and Cheese, the fragrant and spice-infused Laksa, and the bold and vibrant Chilli Crab. A bundle that brings the essence of Singapore straight to your snacking table.</h6>
             </div>
             <div class="ind-prod-review-line">
                 <p><img src="images/stars.png" alt=""> 1 review</p>
@@ -125,7 +125,7 @@
                         
                     </div>
                     <div class="product-size-contents">
-                        <button type="button"><b class="product-size-weight-text">400g</b> <br> $24.00 </button>
+                        <button type="button"><b class="product-size-weight-text">400g</b> <br><p class="font-16 bundle-sales-orange-text"><s>$24.00</s> $21.60</p> </button>
                         <!-- <div class="price-text">
                             <p class="orange-text">$8.50</p>
                         </div> -->
