--- a/about-us.html
+++ b/about-us.html
@@ -148,7 +148,7 @@
                 </div>
                 <div class="col-md-3 col-6">
                     <img src="images/cashew-farmer.png" alt="">
-                    <h5><b>Lica Kaye</b></h5>
+                    <h5><b>Gelan Kaye</b></h5>
                     <h6>CFO</h6>
                 </div>
                 <div class="col-md-3 col-6">
@@ -256,7 +256,7 @@
             <a href="index.html"><img class="Kacaang-logo" src="images/logo.png">
             <div class="mobile-footer-links">
                 <a class="mobile-footer-links" href="shop.html">SHOP</a> <br>
-                <a class="mobile-footer-links" href="shop.html">ON SALE</a> <br>
+                <a class="mobile-footer-links" href="shop.html#sales">ON SALE</a> <br>
                 <a class="mobile-footer-links" href="corporate.html">CORPORATE</a> <br>
                 <a class="mobile-footer-links" href="faqs.html">FAQS</a> <br>
                 <a class="mobile-footer-links" href="about-us.html">OUR STORY</a> <br>
