--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
         </div>
         <div style="background-color: #3A2817; height: 10px; width: 100%;"></div>
     </div>
-
-    <div class="index-image-container">
+    <!--web index banner -->
+    <div class="web-index-image-container">
         <img src="images/best-favourite-healthy-fresh-quality-snack-cashews.png" alt="" class="index-img">
         <div class="overlay page-10-percent">
             <h5>Welcome to Kacaang!</h5> <br>
@@ -119,7 +119,21 @@
                 </div>
         </div>
     </div>
-
+    <!--mobile index banner -->
+    <div class="mobile-index-image-container">
+        <img src="images/best-favourite-healthy-fresh-quality-snack-cashews.png" alt="" class="index-img">
+        <div class="overlay page-10-percent">
+            <h5>Welcome to Kacaang!</h5> <br>
+                <h1>Crack Open a World of Nutty Delights</h1> <br>
+                <div class="indexbtn">
+                    <button class="actionbutton changestyle"><a href="about-us.html" class="contact-link-no-underline">Learn
+                            More</a></button>
+                    <button class="actionbutton"><a href="shop.html" class="contact-link-no-underline">Shop
+                            Now</a></button>
+                </div>
+        </div>
+    </div>
+    <!--Sales banner-->
     <div class="page-10-percent text-center differentbg-brown deals">
         <div class="row suggested-scroll">
             <h3>You’d be <span class="changecolor">nuts</span> to miss these deals</h3>
