--- a/contact-us.html
+++ b/contact-us.html
@@ -41,7 +41,7 @@
                         </button></a>
                         <div class="dropdown-content">
                             <a class="dropdown-item" href="shop.html" style="margin-top: 10px;">All Products</a>
-                            <a class="dropdown-item" href="shop.html" style="margin-top: 10px;">On Sale</a>
+                            <a class="dropdown-item" href="shop.html#sales" style="margin-top: 10px;">On Sale</a>
                             <a class="dropdown-item" href="shop.html" style="margin-top: 10px; margin-bottom: 10px;">Corporate Orders</a>
                         </div>
                     </div>
@@ -136,7 +136,7 @@
                 </div>
                 <div class="col-md-2 offset-md-1">
                     <a class="footer-link" href="shop.html">SHOP</a> <br>
-                    <a class="footer-link" href="shop.html">ON SALES</a> <br>
+                    <a class="footer-link" href="shop.html#sales">ON SALE</a> <br>
                     <a class="footer-link" href="corporate.html">CORPORATE</a> <br>
                     <a class="footer-link" href="faqs.html">FAQS</a>
                 </div>
@@ -169,7 +169,7 @@
             <a href="index.html"><img class="kacaang-logo" src="images/logo.png">
             <div class="mobile-footer-links">
                 <a class="mobile-footer-links" href="shop.html">SHOP</a> <br>
-                <a class="mobile-footer-links" href="shop.html">ON SALE</a> <br>
+                <a class="mobile-footer-links" href="shop.html#sales">ON SALE</a> <br>
                 <a class="mobile-footer-links" href="corporate.html">CORPORATE</a> <br>
                 <a class="mobile-footer-links" href="faqs.html">FAQS</a> <br>
                 <a class="mobile-footer-links" href="about-us.html">OUR STORY</a> <br>
