updates price and pics for shop and prod and col-8

--- a/mala.html
+++ b/mala.html
@@ -120,7 +120,7 @@
                         snacking experience.</h6>
                 </div>
                 <div class="ind-prod-review-line">
-                    <p><img src="images/stars.png" alt=""> 88 review</p>
+                    <p><img src="images/stars.png" alt=""> 82 sold</p>
                 </div>
 
                 <div class="product-size-padding">
