--- a/shop.html
+++ b/shop.html
@@ -300,7 +300,7 @@
         </div>
 
         <div class="shop-content">
-          <a href="#">
+          <a href="saltedegg.html">
           <div class="shop-product">
             <img src="images/shop-products/best-salted-egg-cheese-flavoured-cashews.png" class="shop-product-img">
             <h6> Salted Egg and Cheese Cashews</h6>
@@ -1044,7 +1044,7 @@
                   </div>
               </div>
               <div class="col-md-3">
-                  <a class="footer-link" href="#">PRIVACY POLICY</a> <br>
+                  <a class="footer-link" href="pdpa.html">PRIVACY POLICY</a> <br>
                   <a class="footer-link" href="#">TERMS AND CONDITIONS</a> <br>
               </div>
           </div>
