--- a/saltedegg.html
+++ b/saltedegg.html
@@ -120,7 +120,7 @@
                         savoury and cheesy goodness.</h6>
                 </div>
                 <div class="ind-prod-review-line">
-                    <p><img src="images/stars.png" alt=""> 1 review</p>
+                    <p><img src="images/stars.png" alt=""> 48 sold</p>
                 </div>
 
                 <div class="product-size-padding">
