--- a/smokybbq.html
+++ b/smokybbq.html
@@ -119,7 +119,7 @@
                         blend of spices, these nuts are sure to add a touch of smokiness to every bite.</h6>
                 </div>
                 <div class="ind-prod-review-line">
-                    <p><img src="images/stars.png" alt=""> 1 review</p>
+                    <p><img src="images/stars.png" alt=""> 56 sold</p>
                 </div>
 
                 <div class="product-size-padding">
@@ -175,98 +175,98 @@
         <div class="row suggested-scroll">
             <h3>Suggested Flavours For You</h3>
             <div class="flavours row">
-                <div class="col-md-3 col-sm-4 col-4">
+                <div class="col-md-3 col-sm-4 col-8">
                     <div>
                         <a href="saltroasted.html">
                             <img src="images/shop-products/best-salt-roasted-flavoured-cashews.png"></a>
                         <p>Snack on our perfectly roasted and lightly salted premium cashews.</p>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-4 col-4">
+                <div class="col-md-3 col-sm-4 col-8">
                     <div>
                         <a href="saltedegg.html">
                             <img src="images/shop-products/best-salted-egg-cheese-flavoured-cashews.png"></a>
                         <p>Indulge in the rich, savory allure of salted egg cashews.</p>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-4 col-4">
+                <div class="col-md-3 col-sm-4 col-8">
                     <div>
                         <a href="chickenrice.html">
                             <img src="images/shop-products/best-chicken-rice-flavoured-cashews.png"></a>
                         <p>Get ready for a culinary journey with our Chicken Rice cashews.</p>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-4 col-4">
+                <div class="col-md-3 col-sm-4 col-8">
                     <div>
                         <a href="wantonmee.html">
                             <img src="images/shop-products/best-wanton-mee-flavoured-cashews.png"></a>
                         <p>Experience the magic of Wanton Mee in every cashew.</p>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-4 col-4">
+                <div class="col-md-3 col-sm-4 col-8">
                     <div>
                         <a href="chillicrab.html">
                             <img src="images/shop-products/best-chilli-crab-flavoured-cashews.png"></a>
                         <p>A bold tribute to Singapore’s iconic chilli crab.</p>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-4 col-4">
+                <div class="col-md-3 col-sm-4 col-8">
                     <div>
                         <a href="blackpepper.html">
                             <img src="images/shop-products/best-black-pepper-flavoured-cashews.png"></a>
                         <p>Savour the bold and aromatic kick of our Black Pepper cashews.</p>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-4 col-4">
+                <div class="col-md-3 col-sm-4 col-8">
                     <div>
                         <a href="mala.html">
                             <img src="images/shop-products/best-mala-flavoured-cashews.png"></a>
                         <p>Ignite your taste buds with the fiery sensation of Mala.</p>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-4 col-4">
+                <div class="col-md-3 col-sm-4 col-8">
                     <div>
                         <a href="laksa.html">
                             <img src="images/shop-products/best-laksa-flavoured-cashews.png"></a>
                         <p>Take a flavourful journey with our Laksa-infused cashews.</p>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-4 col-4">
+                <div class="col-md-3 col-sm-4 col-8">
                     <div>
                         <a href="sambal.html">
                             <img src="images/shop-products/best-sambal-belacan-flavoured-cashews.png"></a>
                         <p>Each sambal-infused cashew delivers a hearty kick in every bite.</p>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-4 col-4">
+                <div class="col-md-3 col-sm-4 col-8">
                     <div>
                         <a href="biscoff.html">
                             <img src="images/shop-products/best-lotus-biscoff-flavoured-cashews.png"></a>
                         <p>Indulge in our irresistible Biscoff-infused cashews.</p>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-4 col-4">
+                <div class="col-md-3 col-sm-4 col-8">
                     <div>
                         <a href="chocolate.html">
                             <img src="images/shop-products/best-chocolate-flavoured-cashews.png"></a>
                         <p>Our chocolate-covered cashews are a decadent delight that will sweeten your life.</p>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-4 col-4">
+                <div class="col-md-3 col-sm-4 col-8">
                     <div>
                         <a href="durian.html">
                             <img src="images/shop-products/best-durian-flavoured-cashews.png"></a>
                         <p>Indulge in the bold and creamy richness of our Durian-flavoured cashews.</p>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-4 col-4">
+                <div class="col-md-3 col-sm-4 col-8">
                     <div>
                         <a href="bandung.html">
                             <img src="images/shop-products/best-bandung-flavoured-cashews.png"></a>
                         <p>Immerse yourself in the sweet and rosy goodness of our Bandung-flavoured cashews.</p>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-4 col-4">
+                <div class="col-md-3 col-sm-4 col-8">
                     <div>
                         <a href="whiterabbit.html">
                             <img src="images/shop-products/best-white-rabbit-flavoured-cashews.png"></a>
