removed index stars, move on w life

--- a/index.html
+++ b/index.html
@@ -141,20 +141,28 @@
                 <div class="col-md-4 col-sm-4 col-4">
                     <div>
                         <a href="mala.html" class="contact-link-no-underline">
-                            <div class="shop-product">
-                                <img src="images/shop-products/sales-mala-flavoured-cashews.png"
+                            <div class="shop-product index-shop-product">
+                                <img src="images/shop-products/best-mala-flavoured-cashews.png"
                                     class="shop-product-img">
                                 <h5> Mala Cashews</h5>
-                                <div class="web-stars">
-                                    <div class="shop-review-line">
-                                        <h6><img src="images/stars.png" alt="">1 review</h6>
-                                    </div>
-                                </div>
-                                <div class="mobile-stars">
-                                    <div class="shop-review-line">
-                                        <img src="images/stars.png" alt="">
-                                        <h6>1 review</h6>
-                                    </div>
+                                <div class="shop-price-line">
+                                    <p>from &nbsp </p>
+                                    <p class="font-16 sales-yellow-text"><s>$5.00</s> $4.20</p>
+                                  </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-4 col-4">
+                    <div>
+                        <a href="surebohsavoury.html" class="contact-link-no-underline">
+                            <div class="shop-product index-shop-product">
+                                <img src="images/shop-products/best-flavoured-cashews-savoury-bundle.png"
+                                    class="shop-product-img">
+                                <h5> Sure Boh?! Savoury Bundle</h5>
+                                <div class="shop-price-line">
+                                    <p>from &nbsp </p>
+                                    <p class="font-16 sales-yellow-text"><s>$24.00</s> $21.60</p>
                                 </div>
                             </div>
                         </a>
@@ -162,43 +170,14 @@
                 </div>
                 <div class="col-md-4 col-sm-4 col-4">
                     <div>
-                        <a href="bundle-3.html" class="contact-link-no-underline">
-                            <div class="shop-product">
-                                <img src="images/shop-products/best-flavoured-cashews-bundle-3.png"
+                        <a href="surebohsweet.html" class="contact-link-no-underline">
+                            <div class="shop-product index-shop-product">
+                                <img src="images/shop-products/best-flavoured-cashews-sweet-bundle.png"
                                     class="shop-product-img">
-                                <h5> Bundle A</h5>
-                                <div class="web-stars">
-                                    <div class="shop-review-line">
-                                        <h6><img src="images/stars.png" alt="">1 review</h6>
-                                    </div>
-                                </div>
-                                <div class="mobile-stars">
-                                    <div class="shop-review-line">
-                                        <img src="images/stars.png" alt="">
-                                        <h6>1 review</h6>
-                                    </div>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-4 col-4">
-                    <div>
-                        <a href="bundle-6.html" class="contact-link-no-underline">
-                            <div class="shop-product">
-                                <img src="images/shop-products/best-flavoured-cashews-bundle-6.png"
-                                    class="shop-product-img">
-                                <h5> Bundle B</h5>
-                                <div class="web-stars">
-                                    <div class="shop-review-line">
-                                        <h6><img src="images/stars.png" alt="">1 review</h6>
-                                    </div>
-                                </div>
-                                <div class="mobile-stars">
-                                    <div class="shop-review-line">
-                                        <img src="images/stars.png" alt="">
-                                        <h6>1 review</h6>
-                                    </div>
+                                <h5> Sure Boh?! Sweet Bundle</h5>
+                                <div class="shop-price-line">
+                                    <p>from &nbsp </p>
+                                    <p class="font-16 sales-yellow-text"><s>$24.00</s> $21.60</p>
                                 </div>
                             </div>
                         </a>
