--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                     <div class="col-md-5">
                         <img src="images/number-one-kacaang-cashew-nuts.png">
                     </div>
-                    <div class="col-md-7">
+                    <div class="col-md-7" style="text-align: left; padding-left: 30px;">
                         <br>
                         <h5>With Kacaang, every crunch brings your favourite local flavour to life.</h5>
                         <h6>Elevate your snacking experience with our locally grown cashews bursting with the
@@ -271,12 +271,13 @@
     </div>
 
     <!--web Subscription-->
-    <div class="page-10-percent web-subscription">
+    <div class="web-subscription">
         <div class="row-subscription">
             <div class="row">
-                <div class="col-md-7">
-                    <h3>Got the case of the munchies?</h3> <br>
-                    <h3>Kacaang's <span class="changecolor">CASHEW</span></h3>
+                <div class="col-md-5" style="padding-top: 55px">
+                    <h7>Got the case of the munchies?</h7> <br><br>
+                    <h7>Kacaang's &nbsp;</h7>
+                    <p6 style="color: #C33527; font-family: 'Titan One', sans-serif; font-size: 38px;">CASHEW</p6>
                     <div class="subscribe-icons">
                         <a href="#"><i class="subscribe-icons fa-brands fa-x-twitter"></i></a>
                         <a href="#"><i class="subscribe-icons fa-brands fa-instagram"></i></a>
@@ -284,16 +285,12 @@
                         <a href="#"><i class="subscribe-icons fa-brands fa-tiktok"></i></a>
                     </div>
                 </div>
-                <div class="col-md-5 align-self-end">
-                    <h6 class="changecolor"><b>JOIN THE CASHEW CRAZE CLUB TO STAY UPDATED ABOUT OUR EVENTS AND GET
-                            SPECIAL DISCOUNTS!</b></h6>
+                <div class="col-md-5 offset-md-2" style="padding-top: 15.5%; padding-bottom: 5%;">
+                    <p7 style="color: #C33527; font-family: 'Comfortaa', sans-serif; font-size: 20px;"><b>JOIN THE CASHEW CRAZE CLUB TO STAY UPDATED ABOUT OUR EVENTS AND GET SPECIAL DISCOUNTS!</b></p7>
                     <div class="input-group mb-3" style="margin-top: 38px;">
-                        <input type="text" class="form-control" placeholder="YOUR EMAIL"
-                            aria-label="Recipient's username" aria-describedby="button-addon2">
-                        <button class="actionbutton">
-                            <h6>JOIN</h6>
-                        </button>
-                    </div>
+                        <input type="text" class="form-control" placeholder="YOUR EMAIL" aria-label="Recipient's username" aria-describedby="button-addon2">
+                        <button class="btn btn-outline-secondary" type="button" id="button-addon2">JOIN</button>
+                    </div>      
                 </div>
             </div>
         </div>
@@ -302,9 +299,10 @@
     <div class="mobile-subscription">
         <div class="row-subscription">
             <div class="row">
-                <div class="col-md-7">
-                    <h3>Got the case of the munchies?</h3> <br><br>
-                    <h3>Kacaang's <span class="changecolor">CASHEW</span></h3>
+                <div class="col-md-5" style="padding-top: 55px">
+                    <h7>Got the case of the munchies?</h7> <br><br>
+                    <h7>Kacaang's &nbsp;</h7>
+                    <p6 style="color: #C33527; font-family: 'Titan One', sans-serif; font-size: 38px;">CASHEW</p6>
                     <div class="subscribe-icons">
                         <a href="#"><i class="subscribe-icons fa-brands fa-x-twitter"></i></a>
                         <a href="#"><i class="subscribe-icons fa-brands fa-instagram"></i></a>
@@ -312,16 +310,12 @@
                         <a href="#"><i class="subscribe-icons fa-brands fa-tiktok"></i></a>
                     </div>
                 </div>
-                <div class="col-md-5 align-self-end">
-                    <h6 class="changecolor"><b>JOIN THE CASHEW CRAZE CLUB TO STAY UPDATED ABOUT OUR EVENTS AND GET
-                            SPECIAL DISCOUNTS!</b></h6>
+                <div class="col-md-5 offset-md-2" style="padding-top: 15.5%; padding-bottom: 5%;">
+                    <p7 style="color: #C33527; font-family: 'Comfortaa', sans-serif; font-size: 20px;"><b>JOIN THE CASHEW CRAZE CLUB TO STAY UPDATED ABOUT OUR EVENTS AND GET SPECIAL DISCOUNTS!</b></p7>
                     <div class="input-group mb-3" style="margin-top: 38px;">
-                        <input type="text" class="form-control" placeholder="YOUR EMAIL"
-                            aria-label="Recipient's username" aria-describedby="button-addon2">
-                        <button class="actionbutton">
-                            <h6>JOIN</h6>
-                        </button>
-                    </div>
+                        <input type="text" class="form-control" placeholder="YOUR EMAIL" aria-label="Recipient's username" aria-describedby="button-addon2">
+                        <button class="btn btn-outline-secondary" type="button" id="button-addon2">JOIN</button>
+                    </div>      
                 </div>
             </div>
         </div>
