--- a/about-us.html
+++ b/about-us.html
@@ -15,6 +15,8 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/about-us.css">
+    <!--favicon-->
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 
 <body>
@@ -45,7 +47,7 @@
                             <a class="dropdown-item" href="corporate.html" style="margin-top: 10px; margin-bottom: 10px;">Corporate Orders</a>
                         </div>
                     </div>
-                    <a class="nav-links" href="locate-us.html">Find Us</a>
+                    <a class="nav-links" href="find-us.html">Find Us</a>
                     <a class="nav-links" href="contact-us.html">Contact Us</a>
                     <a class="nav-links" href="faqs.html">FAQs</a>
                     <a class="nav-links" href="reviews.html">Reviews</a>  
@@ -240,8 +242,8 @@
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <a class="footer-link" href="#">PRIVACY POLICY</a> <br>
-                    <a class="footer-link" href="#">TERMS & CONDITIONS</a> <br>
+                    <a class="footer-link" href="pdpa.html">PRIVACY POLICY</a> <br>
+                    <a class="footer-link" href="#">TERMS AND CONDITIONS</a> <br>
                 </div>
             </div>
             <div class="copyright">
@@ -271,7 +273,7 @@
                 </div>
             </div>
             <div class="privacy-tandc">
-                <a class="mobile-footer-links" href="#">PRIVACY POLICY</a> <br>
+                <a class="mobile-footer-links" href="pdpa.html">PRIVACY POLICY</a> <br>
                 <a class="mobile-footer-links" href="#">TERMS AND CONDITIONS</a>
             </div>
             <div class="copyright">
