--- a/bandung.html
+++ b/bandung.html
@@ -29,6 +29,9 @@
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+    <!--favicon-->
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+
 
     <script src="scripts/productEditQty.js"></script>
 </head>
