--- a/basicbitches.html
+++ b/basicbitches.html
@@ -26,7 +26,8 @@
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
          integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
          crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+    <!--favicon-->
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     
     <script src="scripts/productEditQty.js"></script>
 </head>
