--- a/contact-us.html
+++ b/contact-us.html
@@ -15,6 +15,8 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/contact-us.css">
+    <!--favicon-->
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 
 <body>
@@ -45,7 +47,7 @@
                             <a class="dropdown-item" href="shop.html" style="margin-top: 10px; margin-bottom: 10px;">Corporate Orders</a>
                         </div>
                     </div>
-                    <a class="nav-links" href="locate-us.html">Find Us</a>
+                    <a class="nav-links" href="find-us.html">Find Us</a>
                     <a class="nav-links" href="contact-us.html">Contact Us</a>
                     <a class="nav-links" href="faqs.html">FAQs</a>
                     <a class="nav-links" href="reviews.html">Reviews</a>  
@@ -119,7 +121,7 @@
                             <label for="message">Special requests/ Other remarks:<span class="required">*</span></label> <br>
                             <textarea rows="5" name="message" placeholder="Message"></textarea>
                             <div class="send-enquiry">
-                                <a href="#">Sign Up Now</a>
+                                <a href="#">Submit</a>
                             </div>
                         </div>
                     </div>
