--- a/farm.html
+++ b/farm.html
@@ -14,6 +14,8 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/farm.css">
+    <!--favicon-->
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 <body>
      <!--banner-->
@@ -43,7 +45,7 @@
                             <a class="dropdown-item" href="shop.html" style="margin-top: 10px; margin-bottom: 10px;">Corporate Orders</a>
                         </div>
                     </div>
-                    <a class="nav-links" href="locate-us.html">Find Us</a>
+                    <a class="nav-links" href="find-us.html">Find Us</a>
                     <a class="nav-links" href="contact-us.html">Contact Us</a>
                     <a class="nav-links" href="faqs.html">FAQs</a>
                     <a class="nav-links" href="reviews.html">Reviews</a>  
@@ -93,79 +95,6 @@
                 <a href="#farm-tour">Sign Up Now</a>
             </div>
         </div>
-    </div>
-    <!--website Achieving the perfect cashews-->
-    <div class="web-processes" id="web-processes" style="scroll-margin-top: 9em;">
-        <img class="nuts-banner" src="images/nuts-banner.png">
-        <h3 class="heading">How We Achieve the Perfect Cashews</h3>
-        <div class="timeline">
-            <div class="container left row justify-content-md-center col">
-                <div class="tl-content tl-1">
-                    <h3>Step 1</h3>
-                    <img src="images/biscoff.png">
-                    <h6>Hand-pick the best quality cashews from our farm.</h6>
-                </div>
-            </div>
-            <div class="container right row justify-content-md-center col">
-                <div class="tl-content tl-2">
-                    <h3>Step 2</h3>
-                    <img src="images/biscoff.png">
-                    <h6>Dry cashews in the sunlight for a few days before roasting.</h6>
-                </div>
-            </div>
-            <div class="container left row justify-content-md-center col">
-                <div class="tl-content tl-2">
-                    <h3>Step 3</h3>
-                    <img src="images/biscoff.png">
-                    <h6>Remove the outer and inner shell by cutting and peeling.</h6>
-                </div>
-            </div>
-            <div class="container right row justify-content-md-center col" style="padding-bottom: 100px;">
-                <div class="tl-content tl-2">
-                    <h3>Step 4</h3>
-                    <img src="images/biscoff.png">
-                    <h6>Cashews are tossed and coated with our homemade flavourings.</h6>
-                </div>
-            </div>
-        </div>
-        <img class="nuts-banner" src="images/nuts-banner.png">
-    </div>
-    <!--Mobile Achieving the perfect cashews-->
-    <div class="mobile-processes" id="mobile-processes" style="scroll-margin-top: 9em;">
-        <img class="nuts-banner" src="images/nuts-banner.png">
-        <h3 class="heading">How We Achieve the Perfect Cashews</h3>
-        <div class="line"></div>
-        <div class="timeline">
-            <div class="container col">
-                <div class="tl-content tl-1">
-                    <h3>Step 1</h3>
-                    <img src="images/biscoff.png">
-                    <h6>Hand-pick the best quality cashews from our farm.</h6>
-                </div>
-            </div>
-            <div class="container col">
-                <div class="tl-content tl-2">
-                    <h3>Step 2</h3>
-                    <img src="images/biscoff.png">
-                    <h6>Dry cashews in the sunlight for a few days before roasting.</h6>
-                </div>
-            </div>
-            <div class="container col">
-                <div class="tl-content tl-2">
-                    <h3>Step 3</h3>
-                    <img src="images/biscoff.png">
-                    <h6>Remove the outer and inner shell by cutting and peeling.</h6>
-                </div>
-            </div>
-            <div class="container col" style="padding-bottom: 100px;">
-                <div class="tl-content tl-2">
-                    <h3>Step 4</h3>
-                    <img src="images/biscoff.png">
-                    <h6>Cashews are tossed and coated with our homemade flavourings.</h6>
-                </div>
-            </div>
-        </div>
-        <img class="nuts-banner" src="images/nuts-banner.png">
     </div>
     <!--Virtual Farm Tour--> 
     <div class="virtual-tour">
@@ -333,7 +262,7 @@
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <a class="footer-link" href="#">PRIVACY POLICY</a> <br>
+                    <a class="footer-link" href="pdpa.html">PRIVACY POLICY</a> <br>
                     <a class="footer-link" href="#">TERMS AND CONDITIONS</a> <br>
                 </div>
             </div>
@@ -364,7 +293,7 @@
                 </div>
             </div>
             <div class="privacy-tandc">
-                <a class="mobile-footer-links" href="#">PRIVACY POLICY</a> <br>
+                <a class="mobile-footer-links" href="pdpa.html">PRIVACY POLICY</a> <br>
                 <a class="mobile-footer-links" href="#">TERMS AND CONDITIONS</a>
             </div>
             <div class="copyright">
