--- a/surebohsavoury.html
+++ b/surebohsavoury.html
@@ -29,6 +29,8 @@
 
     
     <script src="scripts/productEditQty.js"></script>
+    <!--favicon-->
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 <body>
     
