--- a/surebohsweet.html
+++ b/surebohsweet.html
@@ -127,7 +127,7 @@
                         
                     </div>
                     <div class="product-size-contents">
-                        <button type="button"><b class="product-size-weight-text">400g</b> <br> $24.00 </button>
+                        <button type="button"><b class="product-size-weight-text">400g</b> $21.60 (10% off!)</button>
                         <!-- <div class="price-text">
                             <p class="orange-text">$8.50</p>
                         </div> -->
@@ -172,21 +172,21 @@
                 <div class="flavours row">
                     <div class="col-md-3 col-sm-4 col-4">
                         <div>
-                            <a href="">
+                            <a href="surebohsavoury.html">
                             <img src="images/shop-products/best-flavoured-cashews-savoury-bundle.png"></a>
                             <p>Ready for a savoury adventure? Our Sure Boh?! Savoury Bundle is here to surprise your palate.</p>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-4 col-4">
                         <div>
-                            <a href="">
+                            <a href="shiokaah.html">
                             <img src="images/shop-products/best-flavoured-cashews-local-shiok-bundle.png"></a>
                             <p>It's a celebration of Singapore's culinary treasures!</p>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-4 col-4">
                         <div>
-                            <a href="">
+                            <a href="basicbitches.html">
                             <img src="images/shop-products/best-flavoured-cashews-classic-bundle.png"></a>
                             <p>Dive into the classics with our Bas!c B!tches Bundle!</p>
                         </div>
