tiktok shopee links

--- a/find-us.html
+++ b/find-us.html
@@ -155,20 +155,20 @@
             <div class="col-md-4 find-us-online-stores">
                 <img src="images/find-us/kacaang-cashews-shopee.png" alt="" class="find-us-popups-img">
                 <h3>Shopee</h3>
-                <a href=""><h6>link</h6></a>
+                <a href="https://shopee.sg/kacaang?categoryId=100629&entryPoint=ShopByPDP&itemId=22745622030&upstream=search"><h6>Visit Shop</h6></a>
             </div>
 
             <div class="col-md-4 find-us-online-stores">
                 <img src="images/find-us/kacaang-cashews-lazada.png" alt="" class="find-us-popups-img">
                 <h3>Lazada</h3>
-                <a href="https://www.lazada.sg/lazada5066009702_kacaang-125924272/?spm=a2o42.pdp_revamp.0.0.54ba3f25ZLzScr&type=brand"><h6>visit shop</h6></a>
+                <a href="https://www.lazada.sg/lazada5066009702_kacaang-125924272/?spm=a2o42.pdp_revamp.0.0.54ba3f25ZLzScr&type=brand"><h6>Visit Shop</h6></a>
 
             </div>
 
             <div class="col-md-4 find-us-online-stores">
                 <img src="images/find-us/kacaang-cashews-tiktok.png" alt="" class="find-us-popups-img">
                 <h3>Tik Tok Shop</h3>
-                <a href=""><h6>link</h6></a>
+                <a href="https://vt.tiktok.com/ZSNA4HVvV"><h6>Visit Shop</h6></a>
             </div>
         </div>
 
